8 in for height to avoid overflowing (looks wrong and bad practice :/)

--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,10 @@
 :root {
-    --border: 2px solid black;
+    --border: 3px solid rgb(78, 78, 78);
     --page-width: 11in;
-    --page-height: 8.5in;
+    --page-height: 8in;
 }
 
-* {
+*, *::before, *::after {
     box-sizing: border-box;
 }
 
@@ -52,12 +52,14 @@ body {
     border: 0 var(--border) 0 var(--border);
 }
 
-#row-1 {
+.title-col {
+    flex: 2;
 }
 
 .logo {
-    width: 150px;
-    height: 80px;
+    min-width: 150px;
+    min-height: 100px;
+    max-height: 100px;
     outline: 2px dashed #ccc;
     display: flex;
     align-items: center;
@@ -108,7 +110,7 @@ body {
     grid-template-columns: repeat(5, 1fr);
     grid-auto-rows: 150px;
     gap: 10px;
-    border: none;
+    border-right: var(--border);
     padding: 1rem;
     flex: 1;
 }
@@ -146,7 +148,6 @@ body {
         image-resolution: 72dpi !important;
     }
 
-
     body * {
       visibility: hidden;
     }
@@ -154,8 +155,6 @@ body {
       visibility: visible;
       outline: none;
     }
-
-
   
     /* Asegura que #report ocupe toda la página */
     #report {
